--- a/FirstLab/Readme
+++ b/FirstLab/Readme
@@ -1,1 +1,3 @@
-
+Тарачёв Артём ПИ-211 Лабораторная работа 1. 
+Файл Main.kt - первое задание(телефонная книга) 
+Файл SecondTaskBinarTree.kt - второе задание(бинарное дерево)
